--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </span>
         <div class="footer">
             <span>© Everyone Can Get Rich.</span>
-            <span>This Calculator belongs to Dincer PEÇE</span>
+            <span>This Calculator belongs to Dinçer PEÇE</span>
         </div>
 
     </div>
