--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
             </tr>
             </tbody>
         </table>
-        <button id="compute" onclick="compute()">Calculate</button>
-        <br>
-        <span id="result">
+        <div class="result-and-btn-div">
+            <button id="compute" onclick="compute()">Calculate</button>
+            <span id="result">
                 </span>
+        </div>
+
         <div class="footer">
             <span>© Everyone Can Get Rich.</span>
             <span>This Calculator belongs to Dinçer PEÇE</span>
