--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Interest Calculator</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="dp.js"></script>
     <link rel="stylesheet" href="dp.css">
 </head>
