--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
             <tr>
                 <td class="labels">Amount :</td>
                 <td>
-                    <label for="principal"></label><input type="number" id="principal">
+                    <input type="number" id="principal">
                 </td>
             </tr>
             <tr>
                 <td class="labels">Interest Rate :</td>
-                <td>
-                    <label for="rate"></label><input type="range" min="1" max="20" step="0.25" value="10" id="rate" name="rate" onchange="SliderValue()">
+                <td class="interest-rate-td">
+                    <input type="range" min="1" max="20" step="0.25" value="10" id="rate" name="rate" onchange="SliderValue()">
                     <span id="rate_display">10%</span>
                 </td>
             </tr>
             <tr>
                 <td class="labels">No of Years :</td>
                 <td>
-                    <label for="years"></label><select name="years" id="years">
+                    <select name="years" id="years">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
